@@ -11,18 +11,33 @@
 #define __BOOT_MODULES_H
 
 
-typedef struct symbolList_t{
+typedef struct symbolList_t
+{
 	char* symbol;
 	unsigned int addr;
 	struct symbolList_t* next;
 } symbolList_t;
 
-typedef struct moduleList_t{
+typedef struct moduleList_t
+{
 	char* module;
 	unsigned int version;
 	unsigned int compat;
 	struct moduleList_t* next;
 } moduleList_t;
+
+typedef struct callbackList_t
+{
+	void(*callback)(void*, void*, void*, void*);
+	struct callbackList_t* next;
+} callbackList_t;
+
+typedef struct moduleHook_t
+{
+	const char* name;
+	callbackList_t* callbacks;
+	struct moduleHook_t* next;
+} moduleHook_t;
 
 
 #define SYMBOLS_MODULE "Symbols"
@@ -38,6 +53,23 @@ typedef struct moduleList_t{
 int init_module_system();
 void load_all_modules();
 
+/*
+ * Modules Interface
+ * register_hook
+ *		Notifies the module system that it should log requests
+ *		for callbacks on the hool execution
+ *
+ * execute_hook
+ *		Exexutes a registered hook. All callbaks are
+ *		called in the same order that they were added
+ *
+ * register_hook_callback
+ *		registers a void function to be executed when a
+ *		hook is executed.
+ */
+inline void register_hook(const char* name);
+int execute_hook(const char* name, void*, void*, void*, void*);
+void register_hook_callback(const char* name, void(*callback)(void*, void*, void*, void*));
 
 inline void rebase_location(UInt32* location, char* base);
 
