@@ -5,7 +5,17 @@
 
 #include "libsaio.h"
 
+
+void helloWorld(void* binary, void* arg2, void* arg3, void* arg4)
+{
+	printf("Hello world from ExecKernel hook. Binary located at 0x%X\n", binary);
+	getc();
+	
+}
+
 void HelloWorld_start()
 {
-	printf("Hello World from a module\n");
+	//printf("Hooking 'ExecKernel'\n");
+	register_hook_callback("ExecKernel", &helloWorld);
 }
+
