@@ -1,3 +1,5 @@
+- Added module hooks + callback system. Main code still needs ot be populated with hooks
+- Added module support
 - Fixed lapic_init patch. Fixed _cpuid_set_info patch to work on the 10.6.0 / 10.6.1 kernel (patches cpumodel)
 - Added USB Legacy Off patch. Modified to run immediately *before* the kernel is executed, that
   way no files need to be loaded after the usb device is reset.
